--- a/saracurahc/src/main/resources/WEB-INF/html/appointmentView.html
+++ b/saracurahc/src/main/resources/WEB-INF/html/appointmentView.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -40,22 +40,27 @@
             <div class="row justify-content-around align-items-center">
                 <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownSpecialities" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Especialidades
+                        Escolha uma especialidade
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                        <a class="dropdown-item" th:each="speciality : ${specialities}" th:text="${speciality[TYPE]}" th:value="${speciality[ID]}"></a>
                     </div>
                 </div>
                 <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownDoctors" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Médicos
+                        Escolha um médico
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                        <a class="dropdown-item" href="#" th:each="speciality : ${specialities}" th:text="${speciality[TYPE]}" th:value="${speciality[ID]}"></a>
                     </div>
+                </div>
+            </div>
+            <div class="row justify-content-around align-items-center">
+                <div>
+                    ESPECIALIDADE
+                </div>
+                <div>
+                    MEDICO ESCOLHIDO
                 </div>
             </div>
         </div>
