--- a/saracurahc/src/main/resources/WEB-INF/html/dashboardView.html
+++ b/saracurahc/src/main/resources/WEB-INF/html/dashboardView.html
@@ -35,7 +35,7 @@
                 </ul>
             </div>
         </nav>
-        <div class="margin-top-2pc">
+        <div class="mt2pc">
             <div class="container fill">
                 <div class="row justify-content-around align-items-center">
                     <div class="col-md-4">
