Adição de parâmetros para agendamento de exame por especialidade e por médico.

--- a/saracurahc/src/main/resources/WEB-INF/html/appointmentView.html
+++ b/saracurahc/src/main/resources/WEB-INF/html/appointmentView.html
@@ -58,6 +58,9 @@
                     </div>
                 </div>
             </div>
+            <div id="teste">
+
+            </div>
             <!--<div class="row justify-content-around align-items-center">-->
                 <!--<div>-->
                     <!--ESPECIALIDADE-->
