--- a/saracurahc/src/main/resources/WEB-INF/html/appointmentView.html
+++ b/saracurahc/src/main/resources/WEB-INF/html/appointmentView.html
@@ -52,12 +52,17 @@
     </nav>
     <div class="mt2pc">
         <div class="container">
+            <div class="row mb2pc">
+                <h5 class="mx-auto filters-green-color">
+                    Escolha uma especialidade e um médico para visualizar a agenda do profissional
+                </h5>
+            </div>
             <div class="row justify-content-around align-items-center">
                 <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="btnDropdownSpecialities" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Escolha uma especialidade
                     </button>
-                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton" id="dropdownSpecialities">
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="dropdownSpecialities">
                         <a class="dropdown-item speciality-select" th:each="speciality : ${specialities}" th:text="${speciality[TYPE]}" th:value="${speciality[ID]}"></a>
                     </div>
                 </div>
