--- a/saracurahc/src/main/resources/WEB-INF/html/appointmentView.html
+++ b/saracurahc/src/main/resources/WEB-INF/html/appointmentView.html
@@ -77,9 +77,13 @@
             </div>
         </div>
         <hr class="mb2pc">
-        <div id="scheduleOF" class="row justify-content-around align-items-center">
+        <div class="container">
+            <div class="row">
+                <div id="appointment-schedule">
+                    <!--FILL WITH SCHEDULE CONTENT-->
+                </div>
+            </div>
         </div>
-        <div id="appointment-schedule"></div>
     </div>
 </body>
 </html>
