--- a/saracurahc/src/main/resources/WEB-INF/html/appointmentView.html
+++ b/saracurahc/src/main/resources/WEB-INF/html/appointmentView.html
@@ -59,7 +59,7 @@
             </div>
             <div class="row justify-content-around align-items-center">
                 <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle" type="button" id="btnDropdownSpecialities" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <button class="btn btn-light dropdown-toggle" type="button" id="btnDropdownSpecialities" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Escolha uma especialidade
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="dropdownSpecialities">
@@ -67,7 +67,7 @@
                     </div>
                 </div>
                 <div class="dropdown">
-                    <button disabled class="btn btn-secondary dropdown-toggle" type="button" id="btnDropdownDoctors" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <button disabled class="btn btn-light dropdown-toggle" type="button" id="btnDropdownDoctors" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Escolha um médico
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="dropdownDoctors">
@@ -90,17 +90,55 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="eventCreatorModalLabel">Modal title</h5>
+                    <h5 class="modal-title" id="eventCreatorModalLabel">Agendamento de consulta</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    ...
+                    <div class="row">
+                        <div class="col-md-6">
+                            <i class="material-icons icon-offset">
+                                info
+                            </i> Especialidade
+                        </div>
+                        <div class="col-md-6">
+                            <i class="material-icons icon-offset">
+                                perm_identity
+                            </i>Médico responsável
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <i class="material-icons icon-offset">
+                                access_time
+                            </i> Horário de início
+                        </div>
+                        <div class="col-md-6">
+                            <i class="material-icons icon-offset">
+                                hourglass_empty
+                            </i>Duração
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <i class="material-icons icon-offset">
+                                face
+                            </i>
+                            <input type="text"/>
+                        </div>
+                        <div class="col-md-6">
+                            <i class="material-icons icon-offset">
+                                contact_phone
+                            </i>
+                            <input type="text"/>
+                        </div>
+                    </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-success">Agendar</button>
                 </div>
             </div>
         </div>
