--- a/saracurahc/src/main/resources/WEB-INF/html/appointmentView.html
+++ b/saracurahc/src/main/resources/WEB-INF/html/appointmentView.html
@@ -96,49 +96,77 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <div class="row">
-                        <div class="col-md-6">
-                            <i class="material-icons icon-offset">
-                                info
-                            </i> Especialidade
+                    <div id="appointment-details">
+                        <div class="row">
+                            <div class="col-md-12">
+                                <h6>Detalhes da consulta</h6>
+                            </div>
                         </div>
-                        <div class="col-md-6">
-                            <i class="material-icons icon-offset">
-                                perm_identity
-                            </i>Médico responsável
+                        <div class="row">
+                            <div class="col-md-6">
+                                <i class="material-icons icon-offset">
+                                    info
+                                </i> Especialidade
+                            </div>
+                            <div class="col-md-6">
+                                <i class="material-icons icon-offset">
+                                    perm_identity
+                                </i>Médico responsável
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <i class="material-icons icon-offset">
+                                    access_time
+                                </i> Horário de início
+                            </div>
+                            <div class="col-md-6">
+                                <i class="material-icons icon-offset">
+                                    hourglass_empty
+                                </i>Duração
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="row">
+                            <div class="col-md-12">
+                                <h6>Detalhes do paciente</h6>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="basic-addon1">
+                                            <i class="material-icons">
+                                                face
+                                            </i>
+                                        </span>
+                                    </div>
+                                    <input type="text" class="form-control" placeholder="Nome" aria-label="Username" aria-describedby="basic-addon1">
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="basic-addon2">
+                                            <i class="material-icons">
+                                                contact_phone
+                                            </i>
+                                        </span>
+                                    </div>
+                                    <input type="text" class="form-control" placeholder="Telefone" aria-label="Telefone" aria-describedby="basic-addon2">
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <i class="material-icons icon-offset">
-                                access_time
-                            </i> Horário de início
-                        </div>
-                        <div class="col-md-6">
-                            <i class="material-icons icon-offset">
-                                hourglass_empty
-                            </i>Duração
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <i class="material-icons icon-offset">
-                                face
-                            </i>
-                            <input type="text"/>
-                        </div>
-                        <div class="col-md-6">
-                            <i class="material-icons icon-offset">
-                                contact_phone
-                            </i>
-                            <input type="text"/>
-                        </div>
+                    <div id="appointment-payment" style="display: none">
+                        asdasdsadsdsadsadsads
                     </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-success">Agendar</button>
+                    <button type="button" id="modalProceedBtn" class="btn btn-primary">Avançar</button>
+                    <button type="button" id="modalConfirmBtn" class="btn btn-success" style="display: none">Agendar</button>
                 </div>
             </div>
         </div>
