Adição de elementos para implementação do FULL Calendar

--- a/saracurahc/src/main/resources/WEB-INF/html/appointmentView.html
+++ b/saracurahc/src/main/resources/WEB-INF/html/appointmentView.html
@@ -160,7 +160,47 @@
                         </div>
                     </div>
                     <div id="appointment-payment" style="display: none">
-                        asdasdsadsdsadsadsads
+                        <div class="row">
+                            <div class="col-md-12">
+                                <h6>Detalhes de pagamento</h6>
+                            </div>
+                        </div>
+                        <div class="row mt2pc">
+                            <div class="col-md-4">Convênio</div>
+                            <div class="col-md-4">
+                                <div class="material-switch pull-right">
+                                    <input id="someSwitchOptionSuccess" name="someSwitchOption001" type="checkbox"/>
+                                    <label for="someSwitchOptionSuccess" class="label-success"></label>
+                                </div>
+                            </div>
+                            <div class="col-md-4">Particular</div>
+                        </div>
+                        <div class="row mt2pc">
+                            <div class="col-md-6">
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                    <span class="input-group-text" id="insurance-name">
+                                        <i class="material-icons">
+                                            business
+                                        </i>
+                                    </span>
+                                    </div>
+                                    <input type="text" class="form-control" placeholder="Convênio" aria-label="Convênio" aria-describedby="insurance-name">
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                    <span class="input-group-text" id="insurance-registration">
+                                        <i class="material-icons">
+                                            assignment_ind
+                                        </i>
+                                    </span>
+                                    </div>
+                                    <input type="text" class="form-control" placeholder="Matrícula" aria-label="Matrícula" aria-describedby="insurance-registration">
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="modal-footer">
