Adição de serviço de geração de agenda

--- a/saracurahc/src/main/resources/WEB-INF/html/dashboardView.html
+++ b/saracurahc/src/main/resources/WEB-INF/html/dashboardView.html
@@ -48,14 +48,16 @@
                     <div class="col-md-4">
                         <a href="#" class="photo-bg image-exam-bg home-nav-link">
                             <span class="home-nav-span">
-                                Exame de imagem</a>
+                                Exame de imagem
                             </span>
+                        </a>
                     </div>
                     <div class="col-md-4">
                         <a href="#" class="photo-bg image-scheduling-bg home-nav-link">
                             <span class="home-nav-span">
-                                Atualização de agenda</a>
+                                Atualização de agenda
                             </span>
+                        </a>
                     </div>
                 </div>
             </div>
