Adição dos detalhes da consulta no modal de confirmação.

--- a/saracurahc/src/main/resources/WEB-INF/html/appointmentView.html
+++ b/saracurahc/src/main/resources/WEB-INF/html/appointmentView.html
@@ -106,24 +106,28 @@
                             <div class="col-md-6">
                                 <i class="material-icons icon-offset">
                                     info
-                                </i> Especialidade
+                                </i>
+                                <span id="modal-detail-speciality"> <!-- TO BE FILLED WITH JS --> </span>
                             </div>
                             <div class="col-md-6">
                                 <i class="material-icons icon-offset">
                                     perm_identity
-                                </i>Médico responsável
+                                </i>
+                                <span id="modal-detail-doctor"> <!-- TO BE FILLED WITH JS --> </span>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-md-6">
                                 <i class="material-icons icon-offset">
                                     access_time
-                                </i> Horário de início
+                                </i>
+                                <span id="modal-detail-start"> <!-- TO BE FILLED WITH JS --> </span>
                             </div>
                             <div class="col-md-6">
                                 <i class="material-icons icon-offset">
                                     hourglass_empty
-                                </i>Duração
+                                </i>
+                                <span id="modal-detail-duration"> <!-- TO BE FILLED WITH JS --> </span>
                             </div>
                         </div>
                         <hr>
