--- a/saracurahc/src/main/resources/WEB-INF/html/appointmentView.html
+++ b/saracurahc/src/main/resources/WEB-INF/html/appointmentView.html
@@ -96,6 +96,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
+                    <input id="event-id" hidden>
                     <div id="appointment-details">
                         <div class="row">
                             <div class="col-md-12">
